[package]
name = "yew-google-material"
description = "A simple crate to use some of google materials"
version = "0.0.4"
edition = "2021"
license = "MIT"
keywords = ["yew", "icon", "material", "stylist", "style"]
categories = ["development-tools", "network-programming"]
repository = "https://github.com/ArtyomSinyugin/yew-google-material/"
documentation = "https://docs.rs/yew-google-material"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
stylist = { version = "0.13.0", features = ["yew", "parser"] }
web-sys = { version = "0.3.69", features = ["Element"] }